SERVER-29693 wait for all oplog writes to be visible for afterClusterTime and readConcern level local