src/mongo/db/repl/replication_coordinator_external_state_mock.cpp
@@ -84,6 +84,9 @@ Status ReplicationCoordinatorExternalStateMock::initializeReplSetStorage(Operati
     return storeLocalConfigDocument(opCtx, config);
 }
 
+void ReplicationCoordinatorExternalStateMock::waitForAllEarlierOplogWritesToBeVisible(
+    OperationContext* opCtx) {}
+
 void ReplicationCoordinatorExternalStateMock::shutdown(OperationContext*) {}
 
 executor::TaskExecutor* ReplicationCoordinatorExternalStateMock::getTaskExecutor() const {
